src/test/deca/syntax/invalid/created/miscellaneous/infinite_float2.deca
// Description :
//    test d'un float infinite
//
// Resultats :
//		Erreur lexicographique
//    	Ligne 8:  ?

{
float a = 1.0e99
}